# devcomb-openapi-v3.yaml
@@ -11,33 +11,75 @@ servers:
     basePath:
       default: v2
 paths:
-  /api/getSideNavMenus:
+  /greet:
+    get:
+      summary: Greets the user
+      operationId: getGreeting
+      x-exegesis-controller: greetController
+      parameters:
+        - description: The name of the user to greet.
+          name: name
+          in: query
+          schema:
+            type: string
+        - description: TEST.
+          name: test
+          in: query
+          schema:
+            type: string
+      responses:
+        200:
+          description: A greeting for the user.
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - message
+                properties:
+                  message:
+                    type: string
+        default:
+          description: Unexpected error.
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - message
+                properties:
+                  message:
+                    type: string
+  /getSideNavMenus:
     get:
       tags:
       - "SideNavMenus"
       summary: "Get Side Navigation Menu Items with URLs"
       description: ""
       operationId: "getSideNavMenus"
+      x-exegesis-controller: impl_api
       responses:
         200:
           description: "successful operation"
-  /api/getSideNavRightMenus:
+  /getSideNavRightMenus:
     get:
       tags:
       - "SideNavRightMenus"
       summary: "Get Right Side Navigation Menu Items with URLs"
       description: ""
       operationId: "getSideNavRightMenus"
+      x-exegesis-controller: impl_api
       responses:
         200:
           description: "successful operation"
-  /api/getHeaderMenus:
+  /getHeaderMenus:
     get:
       tags:
       - "HeaderMenus"
       summary: "Get Header Navigation Menu Items with URLs"
       description: ""
       operationId: "getHeaderMenus"
+      x-exegesis-controller: impl_api
       responses:
         200:
           description: "successful operation"
